--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
 
-<head>
-  <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta
+            name="description"
+            content="Web site created using create-react-app"
+        />
+        <title>Moroon</title>
+    </head>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <title>Moroon</title>
-</head>
-
-<body>
-
-  <div id="root"></div>
-
-</body>
-
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
